force-app/main/default/objects/Installed_Product__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Installed Products</relationshipLabel>
    <relationshipName>Installed_Products</relationshipName>
    <type>Lookup</type>
</CustomField>